[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyconch"
version = "0.0.5"
requires-python = ">=3.12"
authors = [
	{ name = "Mark Veltzer", email = "mark.veltzer@gmail.com" }
]
maintainers = [
	{ name = "Mark Veltzer", email = "mark.veltzer@gmail.com" }
]
description = "Pyconch is a wrapper for a shell in python"
readme = "README.md"
license = "MIT"
keywords=[
    "shell",
    "bash",
    "tcsh",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Topic :: Utilities",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "pytconf",
    "prompt_toolkit",
    "ptterm",
]

[project.urls]
"Homepage" = "https://github.com/veltzer/pyconch"
"Bug Tracker" = "https://github.com/veltzer/pyconch/issues"
"Documentation" = "https://veltzer.github.io/pyconch"
"Download" = "https://pypi.org/project/pyconch/"
"Repository" = "https://github.com/veltzer/pyconch"

[project.scripts]
pyconch = "pyconch.endpoints.main:main"

[tool.ruff]
line-length = 130

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.hatch.build.targets.wheel]
packages = ["src/pyconch"]

[tool.hatch.build.targets.sdist]
include = [
    "src/pyconch/",
    "README.md",
    "LICENSE",
    "pyproject.toml"
]
exclude = [
    ".gitignore",
    ".github/",
    "tests/",
    "docs/",
    "config/",
    "*.md",
]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
